Fixed alignment of the backlog page components

--- a/src/app/backlog/backlog.component.css
+++ b/src/app/backlog/backlog.component.css
@@ -1,3 +1,13 @@
 .sprints-wrapper {
   margin-bottom: 50px;
 }
+
+.box {
+  background-color: #fff;
+  color: #444;
+  border-radius: 5px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 150%;
+}
